--- a/front-end/bower.json
+++ b/front-end/bower.json
@@ -12,6 +12,11 @@
   ],
   "dependencies": {
     "purescript-console": "^0.1.0",
-    "purescript-math": "~0.2.0"
+    "purescript-functions": "~0.1.0",
+    "purescript-leaflet": "~0.1.0",
+    "purescript-math": "~0.2.0",
+    "purescript-maybe": "~0.3.4",
+    "purescript-strings": "~0.7.0",
+    "purescript-tuples": "~0.4.0"
   }
 }
