--- a/front-end/bower.json
+++ b/front-end/bower.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "purescript-console": "^0.1.0",
     "purescript-functions": "~0.1.0",
-    "purescript-leaflet": "~0.1.0",
+    "purescript-leaflet": "git://github.com/lewurm/purescript-leaflet.git",
     "purescript-math": "~0.2.0",
     "purescript-maybe": "~0.3.4",
     "purescript-strings": "~0.7.0",
